<resources>
    <string name="app_name">Anima</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--  Filter Section  -->
    <string-array name="spinner_type_array">
        <item>Anime</item>
        <item>Manga</item>
    </string-array>
    <string-array name="spinner_status_array">
        <item>All</item>
        <item>Finished</item>
        <item>Releasing</item>
        <item>Not Yet Released</item>
        <item>Cancelled</item>
        <item>Hiatus</item> <!--for manga only -->
    </string-array>
    <string-array name="spinner_season_array">
        <item>All</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
    </string-array>
    <string-array name="spinner_format_anime_array">
        <item>All</item>
        <item>TV</item>
        <item>TV Short</item>
        <item>Movie</item>
        <item>Special</item>
        <item>OVA</item>
        <item>ONA</item>
        <item>Music</item>
    </string-array>
    <string-array name="spinner_format_manga_array">
        <item>All</item>
        <item>Manga</item>
        <item>Novel</item>
        <item>One Shot</item>
    </string-array>
    <string-array name="spinner_source_array">
        <item>All</item>
        <item>Original</item>
        <item>Manga</item>
        <item>Novel</item>
        <item>Anime</item>
        <item>Light Novel</item>
        <item>Visual Novel</item>
        <item>Video Game</item>
        <item>Doujinshi</item>
        <item>Other</item>
    </string-array>
    <string-array name="genres">
        <item>Action</item>
        <item>Adventure</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Ecchi</item>
        <item>Fantasy</item>
        <item>Hentai</item>
        <item>Horror</item>
        <item>Machou Shouju</item>
        <item>Mecha</item>
        <item>Music</item>
        <item>Mystery</item>
        <item>Psychological</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Slice of Life</item>
        <item>Sports</item>
        <item>Supernatural</item>
        <item>Thriller</item>
    </string-array>
    <string-array name="sort_in">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="sort_by">
        <item>Popularity</item>
        <item>Score</item>
        <item>Start Date</item>
        <item>Episodes</item>
        <item>Chapters</item>
        <item>Volumes</item>
    </string-array>

    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="filter_type">Type</string>
    <string name="filter_format">Format</string>
    <string name="filter_status">Status</string>
    <string name="filter_season">Season</string>
    <string name="filter_start_year">Start Year</string>
    <string name="filter_genres">Genres</string>
    <string name="btn_genre">Genre</string>
    <string name="filter_source">Source</string>
    <string name="filter_all_time">All Time</string>

    <string name="sort_by_popularity">Popularity</string>
    <string name="sort_by_score">Score</string>
    <string name="sort_by_start_date">Start Date</string>
    <string name="sort_by_episodes">Episodes</string>
    <string name="sort_by_chapters">Chapters</string>
    <string name="sort_by_volumes">Volumes</string>
    <string name="sort_in_ascending">Ascending</string>
    <string name="sort_in_descending">Descending</string>

    <!-- Navigation menu titles   -->
    <string name="browse_anime">Browse Anime</string>
    <string name="browse_manga">Browse Manga</string>
    <string name="discover">Discover</string>
    <string name="trending">Trending</string> <!-- fragment trending title -->
    <string name="what_s_trending">What\'s Trending</string>
    <string name="manage">Manage</string>
    <string name="my_anime_list">My Anime List</string>
    <string name="my_manga_list">My Manga List</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- Tab Search titles constants  -->
    <string name="searchHint">Search.....</string>
    <string name="tab_anime">Anime</string>
    <string name="tab_manga">Manga</string>
    <string name="tab_studio">Studio</string>
    <string name="tab_user">User</string>
    <string name="tab_characters">Characters</string>
    <string name="tab_staff">Staff</string>

    <!--  Tab details titles constants  -->
    <string name="tab_series_overview">Overview</string>
    <string name="tab_series_relation">Relation</string>

    <!--   Tab Media Details titles constants -->
    <string name="overview">Overview</string> <!--<item>Stats</item>-->
    <string name="relation">Relations</string>
    <string name="character">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="staff">Staff</string>
    <string name="reviews">Reviews</string>

    <!--    Media Menu titles constants-->
    <string name="favorite_this">Favorite this</string>
    <string name="add_to_list">Add to list</string>
    <string name="share">Share</string>

    <string name="character_main">Main</string>
    <string name="character_support">Supporting</string>
    <string name="character_background">background</string>
    <string name="the_best_anime_of_all_time">The Best Anime of all Time</string>
    <string name="title_main">Main Fragment</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>

    <string name="title_series_description">Series Description</string>
    <string name="title_series_status">Series Status</string>
    <string name="title_series_season">Series Season</string>
    <string name="title_series_score">Series Score</string>
    <string name="title_series_source">Series Source</string>

    <string name="title_total_chapters">Total Chapters</string>
    <string name="title_total_volumes">Total Volumes</string>

    <string name="title_total_episodes">Total Episodes</string>
    <string name="title_episode_duration">Episode Duration</string>
    <string name="title_next_episode">Next Episode</string>

    <string name="title_hash_tag">Hash Tag</string>
    <string name="title_main_studio">Main Studio</string>

    <string name="init_youtube_missing">Consider installing the YouTube App if you want to watch trailers!</string>
    <string name="title_ended_at">Series Ended At</string>
    <string name="title_started_at">Series Started At</string>

    <string name="content_media_trailer_thumbnail">Media Trailer Thumbnail</string>
    <string name="content_desc_media_cover">Media Cover</string>
    <string name="content_disc_error_image">image error</string>

    <string name="error_connection">Not connected to Internet!\nPlease check internet connection.</string>

    <!--Oauth  -->
    <string name="text_sign_in">Otaku-kun Sign-In</string>
    <string name="sign_into_anilist">Sign Into AniList</string>
    <string name="create_account">Do you want to create an account?</string>
    <string name="text_create_account"><![CDATA[Don\'t have an account? <a href=\"https://anilist.co/signup\">Create Account</a>]]></string>

    <!-- Preference Titles -->
    <string name="appearance_header">Appearance</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="theme_title">Theme</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
