<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance_header">

        <ListPreference
            app:defaultValue="default"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

<!--        <EditTextPreference-->
<!--            app:key="signature"-->f
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->
    </PreferenceCategory>

<!--    <PreferenceCategory app:title="@string/sync_header">-->
<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->
<!--    </PreferenceCategory>-->

    <PreferenceCategory>
        <Preference
            app:key="OAuth_user_token"
            app:title="@string/sign_out"
            app:singleLineTitle="true" />
    </PreferenceCategory>
</PreferenceScreen>