<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.index.LoginActivity">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        app:cardCornerRadius="14dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_lg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:fontFamily="@font/lobster"
                android:gravity="center"
                android:lines="1"
                android:text="@string/text_sign_in"
                android:textSize="22sp"
                android:textStyle="bold" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lg_margin" />

            <ViewFlipper
                android:id="@+id/widget_flipper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:inAnimation="@android:anim/fade_in"
                android:outAnimation="@android:anim/fade_out">

                <androidx.cardview.widget.CardView
                    android:id="@+id/auth_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    app:cardBackgroundColor="?colorSecondaryVariant"
                    app:cardCornerRadius="@dimen/lg_margin"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="@dimen/lg_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/sm_margin"
                        android:ellipsize="end"
                        android:textColor="@color/white"
                        android:fontFamily="@font/lobster"
                        android:text="@string/sign_into_anilist"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                </androidx.cardview.widget.CardView>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" />
            </ViewFlipper>

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lg_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="@dimen/md_margin"
                fromHtml="@{@string/text_create_account}"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textIsSelectable="true"
                android:textStyle="italic"
                tools:text="@string/create_account" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>